<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_auth">

    <!-- 验证模块 -->
    <fragment
        android:id="@+id/navigation_auth"
        android:name="com.example.passwordsafe.ui.auth.AuthFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_auth">
        
        <action
            android:id="@+id/action_authFragment_to_navigation_home"
            app:destination="@id/navigation_accounts"
            app:popUpTo="@id/navigation_auth"
            app:popUpToInclusive="true" />
        
        <action
            android:id="@+id/action_authFragment_to_setupPasswordFragment"
            app:destination="@id/navigation_setup_password"
            app:popUpTo="@id/navigation_auth"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setup_password"
        android:name="com.example.passwordsafe.ui.auth.SetupPasswordFragment"
        android:label="@string/setup_password_title"
        tools:layout="@layout/fragment_setup_password">
        
        <action
            android:id="@+id/action_setupPasswordFragment_to_navigation_home"
            app:destination="@id/navigation_accounts"
            app:popUpTo="@id/navigation_auth"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- 主页模块 -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.passwordsafe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        
        <action
            android:id="@+id/action_navigation_home_to_addAccountFragment"
            app:destination="@id/navigation_add_account" />
        
        <action
            android:id="@+id/action_navigation_home_to_accountDetailFragment"
            app:destination="@id/navigation_account_detail">
            <argument
                android:name="accountId"
                app:argType="long" />
        </action>
    </fragment>

    <!-- 添加账号 -->
    <fragment
        android:id="@+id/navigation_add_account"
        android:name="com.example.passwordsafe.ui.accounts.AddEditAccountFragment"
        android:label="@string/title_add_account"
        tools:layout="@layout/fragment_add_edit_account">
        
        <argument
            android:name="accountId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <!-- 账号详情 -->
    <fragment
        android:id="@+id/navigation_account_detail"
        android:name="com.example.passwordsafe.ui.accounts.AccountDetailFragment"
        android:label="@string/title_account_detail"
        tools:layout="@layout/fragment_account_detail">
        
        <argument
            android:name="accountId"
            app:argType="long" />
        
        <action
            android:id="@+id/action_accountDetailFragment_to_addAccountFragment"
            app:destination="@id/navigation_add_account">
            <argument
                android:name="accountId"
                app:argType="long" />
        </action>
    </fragment>

    <!-- 账号列表 -->
    <fragment
        android:id="@+id/navigation_accounts"
        android:name="com.example.passwordsafe.ui.accounts.AccountsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts">
        
        <action
            android:id="@+id/action_navigation_accounts_to_addAccountFragment"
            app:destination="@id/navigation_add_account" />
        
        <action
            android:id="@+id/action_navigation_accounts_to_accountDetailFragment"
            app:destination="@id/navigation_account_detail">
            <argument
                android:name="accountId"
                app:argType="long" />
        </action>
    </fragment>

    <!-- 设置 -->
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.passwordsafe.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
